# rust-c2-framework

./: Cargo.toml  EN-Function.md  EN-README.md  Function.md  LICENSE  README.md  client_config.toml  reverse_shell_architecture.md  server_config.toml
.github/: copilot-instructions.md
client/: Cargo.toml  main.rs
client/src/: check.rs  client_info.rs  command_executor.rs  file_manager.rs  gadgets.rs  main.rs  mod.rs  process_hider.rs  shell.rs
common/: Cargo.toml  lib.rs  mod.rs
common/src/: config.rs  crypto.rs  error.rs  lib.rs  message.rs  network.rs  sysinfo.rs
server/: Cargo.toml  main.rs  main_v2.rs
server/src/: audit.rs  auth.rs  error.rs  lib.rs  main.rs  reverse_shell_listener.rs  state.rs
server/src/handlers/: api.rs  file.rs  mod.rs  web.rs
server/src/managers/: client_manager.rs  mod.rs  shell_manager.rs
server/templates/: client.html  client.html.backup  client_broken.html  error.html  index.html  login.html
src/: audit.rs  client_manager.rs  common.rs  config.rs  error.rs  lib.rs  shell_manager.rs
templates/: client.html  index.html  login.html
test/: network.rs
test/src/: main.rs
web/static/: style.css
web/static/css/: base.css  command-execution.css  components.css  dashboard.css  file-manager.css  log-categories.css  logs.css  misc.css  reverse-shell.css  tabs.css  variables.css
web/static/js/: command-execution.js  common.js  dashboard.js  file-manager.js  logs.js  notes.js  reverse-shell.js  settings.js  tabs.js
