[package]
name = "rust-c2-framework"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "client/main.rs"

[[bin]]
name = "server"
path = "server/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
aes-gcm = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
toml = "0.8"

# Network dependencies
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
reqwest = { version = "0.11", features = ["json"] }

# Web server dependencies
axum = "0.8.4"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "fs"] }
askama = "0.12"
askama_axum = "0.3"

# System dependencies
nix = "0.26"
common = { path = "./common" }

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
