[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22.1"
hex = "0.4.3"
cryptify = "3.1.1"
rand = "0.9.1"
libc = "0.2"
tokio-stream = "0.1"
futures = "0.3"
bytes = "1.0"
tracing = "0.1.41"
nix = "0.26"

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
