[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
aes-gcm = "0.10"
rand = "0.8"
