[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
toml = "0.8"
axum = { version = "0.8.4", features = ["ws"] } # Enable ws feature
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower-cookies = "0.11"
askama = "0.12"
askama_axum = "0.3"
nix = "0.26"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
dirs = "5.0"
bytes = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
tokio-stream = "0.1.17"
regex = "1.11.1"
base64 = "0.22.1"
# Removed ws = "0.9.2" to avoid conflict with axum's ws feature

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
uuid = "1.0"
chrono = { version = "0.4", features = ["serde"] }
